# cpp-cvl

./: CMakeLists.txt  Main.cpp  MoCap.cpp  README.md  Test.cpp  Test2.cpp  cvl.hpp
DATA/: deploy.prototxt
FR/: CMakeLists.txt  README.md  action_event_metrics.py  create_list.py  fr.hpp  main.cpp
FR/include/: actions.hpp  face_reid.hpp
FR/src/: action_detector.cpp  align_transform.cpp  reid_gallery.cpp
INCLUDE/: Camera.hpp  CameraCV.hpp  CameraOV.hpp  Common.hpp  Counter.hpp  Detector.hpp  Geometry.hpp  HAAR.hpp  HOG.hpp  IEDetectors.hpp  Person.hpp  Source.hpp  Tracker.hpp
MODELS/face-detection-retail-0005/FP16/: face-detection-retail-0005.xml
MODELS/face-reidentification-retail-0095/FP32/: face-reidentification-retail-0095.xml
MODELS/fr_gallery/: faces_gallery.json
MODELS/person-detection-action-recognition-0005/FP16/: person-detection-action-recognition-0005.xml
MODELS/person-reidentification-retail-0270/FP16/: person-reidentification-retail-0270.xml
fd/: CMakeLists.txt  README.md  detectors.cpp  detectors.hpp  face.hpp  main.cpp  visualizer.cpp
fr/: CMakeLists.txt  main.cpp  models.lst
fr/include/: action_detector.hpp  cnn.hpp  detector.hpp  face_reid.hpp  image_grabber.hpp  logger.hpp  smart_classroom_demo.hpp  tracker.hpp
fr/src/: cnn.cpp  detector.cpp  image_grabber.cpp  logger.cpp  reid_gallery.cpp  tracker.cpp
pt/: CMakeLists.txt  README.md  main.cpp  models.lst
pt/include/: cnn.hpp  descriptor.hpp  detector.hpp  distance.hpp  logging.hpp  pedestrian_tracker_demo.hpp  tracker.hpp  utils.hpp
pt/src/: cnn.cpp  detector.cpp  distance.cpp  kuhn_munkres.cpp  tracker.cpp  utils.cpp
